Changes to borders, active states of logo and input button, margin and padding fix. Nav jumping fix.

--- a/styles.css
+++ b/styles.css
@@ -31,15 +31,15 @@ h1 {
   margin-right: 16px; /* Just to not stick to each other */
 }
 
-.logo:hover {
+.logo[href]:hover {
   opacity: .7;
 }
 
-.logo:focus {
+.logo[href]:focus {
   outline: 4px solid #3892F3;
 }
 
-.logo:active {
+.logo[href]:active {
   outline: 4px solid #3892F3;
 }
 
@@ -66,6 +66,7 @@ h1 {
   padding: 8px 20px;
   text-decoration: none;
   display: block;
+  border-bottom: 2px solid transparent;
 }
 
 .nav__link:hover,
@@ -91,7 +92,7 @@ h1 {
 }
 
 .nav__link--active {
-  border-bottom: 2px solid #0265DC;
+  border-color: #0265DC;
 }
 
 .header__actions {
@@ -118,6 +119,23 @@ h1 {
   margin: 0 16px;
 }
 
+.search__button {
+  border: 2px solid transparent;
+}
+  
+.search__button:hover {
+  border-color: #3892F3;
+}
+
+.search__button:focus {
+  border-color: #3892F3;
+  outline: 1px solid #3892F3;
+}
+
+.search__button:invalid {
+  border-color: #EA3829;
+}
+
 .search__input {
   color: #e7eef7a8;
   font-size: 14px;
@@ -128,16 +146,16 @@ h1 {
 }
 
 .search__input:hover {
-  border: 2px solid #3892F3;
+  border-color: #3892F3;
 }
 
 .search__input:focus {
-  border: 2px solid #3892F3;
+  border-color: #3892F3;
   outline: 1px solid #3892F3;
 }
 
 .search__input:invalid {
-  border: 2px solid #EA3829;
+  border-color: #EA3829;
 }
 
 
@@ -147,6 +165,10 @@ h1 {
   text-decoration: none;
   padding: 10px 24px;
   display: inline-block;
+}
+
+.button:focus {
+  outline-offset: 0;
 }
 
 .button--primary {
@@ -160,14 +182,13 @@ h1 {
 }
 
 .button--primary:focus {
-  background-color: #0265DC;
   border-color: #3892F3;
   outline: 2px solid #3892F3;
 }
 
 .button--primary:active {
-  background-color:  #0054B6;
-  border: 2px solid #0054B6;
+  background-color: #0054B6;
+  border-color: #0054B6;
 }
 
 .button--secondary {
@@ -178,12 +199,12 @@ h1 {
 .button--secondary:hover,
 .button--secondary:active {
   background-color: #BFC5EE1F;
-  border: 2px solid #BFC5EE1F;
+  border-color: #BFC5EE1F;
 }
 
 .button--secondary:focus {
   background-color: #BFC5EE1F;
-  border: 2px solid #3892F3;
+  border-color: #3892F3;
   outline: 2px solid #3892F3;
 }
 
@@ -316,7 +337,6 @@ h1 {
 
 .catalog__list {
   display: flex;
-  justify-content: center; /* Why delete if it is centering my cards?*/
 }
 
 .product {
@@ -667,17 +687,17 @@ border-image: linear-gradient(137.5deg,
 }
 
 .faq__question:active {
-border: 3px solid #3892F3;
+  border: 3px solid #3892F3;
 }
 
 .faq__question:focus {
-border: 3px solid #0265DC;
-outline: 1px solid #3892F3;
+  border: 3px solid #0265DC;
+  outline: 1px solid #3892F3;
 }
 
 .faq__content {
-  padding-bottom: 32px;
-  padding-inline: 24px;
+  padding: 16px 24px 32px;
+  border-top: 1px solid #BFC5EE1F;
 }
 
 .faq__answer {
@@ -685,8 +705,6 @@ outline: 1px solid #3892F3;
   font-size: 16px;
   line-height: 24px;
   margin: 0;
-  padding-top: 16px;
-  border-top: 1px solid #BFC5EE1F;
 }
 
 .footer {
@@ -802,8 +820,6 @@ outline: 1px solid #3892F3;
   font-size: 14px;
   line-height: 20px;
   padding: 6px 12px;
-  display: flex;
-  align-items: center;
   position: relative;
 }
 
@@ -821,8 +837,6 @@ outline: 1px solid #3892F3;
 .breadcrumb__link {
   color: #F5F8FB;
   text-decoration: none;
-  display: flex;
-  align-items: center;
 }
 
 .page-layout {
@@ -833,7 +847,8 @@ outline: 1px solid #3892F3;
 }
 
 .aside {
-  min-width: 328px;
+  width: 328px;
+  flex-shrink: 0;
 }
 
 .aside__box {
@@ -917,8 +932,7 @@ outline: 1px solid #3892F3;
 }
 
 .figure {
-  margin: 0;
-  margin-bottom: 32px;
+  margin: 0 0 32px;
 }
 
 .figure__caption {
@@ -958,7 +972,7 @@ outline: 1px solid #3892F3;
 .article__list {
   margin-top: 0;
   margin-bottom: 32px;
-  padding-left: 24px;
+  padding-left: 32px;
 }
 
 .article__custom-list {
@@ -970,7 +984,7 @@ outline: 1px solid #3892F3;
   margin-bottom: 8px;
 }
 
-.quote-wrapper{
+.quote-wrapper {
   background-color: #002754;
   padding: 16px;
   border-radius: 16px;
@@ -978,7 +992,6 @@ outline: 1px solid #3892F3;
 }
 
 blockquote {
-  padding: 0;
   margin: 0;
 }
 
@@ -1010,7 +1023,7 @@ blockquote {
 }
 
 .figure-wrapper .figure {
-  max-width: 500px;
+  width: calc(50% - 24px);
 }
 
 .figure:last-child {
@@ -1045,7 +1058,7 @@ blockquote {
 }
 
 .article__footer .action-tag:not(:last-child) {
-  margin-left: 16px;
+  margin-right: 16px;
 }
 
 .article__footer .action-tag__item:not(:last-child) {
